force-app/main/default/objects/Product2/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Hatchback 3-door</fullName>
            </value>
            <value>
                <fullName>Hatchback 5-door</fullName>
            </value>
            <value>
                <fullName>Station Wagon</fullName>
            </value>
            <value>
                <fullName>Wagon, SUV</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Pickup Truck</fullName>
            </value>
            <value>
                <fullName>Coupe,</fullName>
                <isActive>false</isActive>
                <label>Coupe,</label>
            </value>
            <value>
                <fullName>Hatchback 3-door,</fullName>
                <isActive>false</isActive>
                <label>Hatchback 3-door,</label>
            </value>
            <value>
                <fullName>Hatchback 5-door,</fullName>
                <isActive>false</isActive>
                <label>Hatchback 5-door,</label>
            </value>
            <value>
                <fullName>Minivan,</fullName>
                <isActive>false</isActive>
                <label>Minivan,</label>
            </value>
            <value>
                <fullName>SUV,</fullName>
                <isActive>false</isActive>
                <label>SUV,</label>
            </value>
            <value>
                <fullName>Sedan,</fullName>
                <isActive>false</isActive>
                <label>Sedan,</label>
            </value>
            <value>
                <fullName>Station Wagon,</fullName>
                <isActive>false</isActive>
                <label>Station Wagon,</label>
            </value>
            <value>
                <fullName>Wagon,</fullName>
                <isActive>false</isActive>
                <label>Wagon,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>