force-app/main/default/objects/Product2/fields/Engine_Capacity_cc_c__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity_cc_c__c</fullName>
    <inlineHelpText>api name: Engine_Capacity_cc__c</inlineHelpText>
    <label>Engine Capacity(cc)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to 1000</fullName>
            </value>
            <value>
                <fullName>1000 to 1500</fullName>
            </value>
            <value>
                <fullName>1500 to 1800</fullName>
            </value>
            <value>
                <fullName>1800 to 2000</fullName>
            </value>
            <value>
                <fullName>2000 to 2500</fullName>
            </value>
            <value>
                <fullName>Above 2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>