force-app/main/default/objects/Product2/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Diesel,</fullName>
                <isActive>false</isActive>
                <label>Diesel,</label>
            </value>
            <value>
                <fullName>Gasoline,</fullName>
                <isActive>false</isActive>
                <label>Gasoline,</label>
            </value>
            <value>
                <fullName>Hybrid,</fullName>
                <isActive>false</isActive>
                <label>Hybrid,</label>
            </value>
            <value>
                <fullName>LPG,</fullName>
                <isActive>false</isActive>
                <label>LPG,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>