force-app/main/default/objects/Product2/fields/Gear__c.field-meta.xml
<CustomField>
    <fullName>Gear__c</fullName>
    <label>Gear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Semi-Automatic</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual,</fullName>
                <isActive>false</isActive>
                <label>Manual,</label>
            </value>
            <value>
                <fullName>Semi-Automatic,</fullName>
                <isActive>false</isActive>
                <label>Semi-Automatic,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>