force-app/main/default/objects/Product2/fields/productERPId__c.field-meta.xml
<CustomField>
    <fullName>productERPId__c</fullName>
    <description>This Id come from ERP system.</description>
    <label>productERPId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>