force-app/main/default/objects/Product2/fields/Wheel_Drive__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Drive__c</fullName>
    <label>Wheel Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front-Wheel Drive</fullName>
            </value>
            <value>
                <fullName>Rear-Wheel Drive</fullName>
            </value>
            <value>
                <fullName>4WD (Continuous)</fullName>
            </value>
            <value>
                <fullName>AWD (Electronic)</fullName>
            </value>
            <value>
                <fullName>4WD (Continuous),</fullName>
                <isActive>false</isActive>
                <label>4WD (Continuous),</label>
            </value>
            <value>
                <fullName>Front-Wheel Drive,</fullName>
                <isActive>false</isActive>
                <label>Front-Wheel Drive,</label>
            </value>
            <value>
                <fullName>Rear-Wheel Drive,</fullName>
                <isActive>false</isActive>
                <label>Rear-Wheel Drive,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>